# Computational-logic-TD2

./: .gitignore  README.md  TD2.opam  dune-project  sat.ml
lib/: cnf.ml  dpll.ml  dune  simple.ml  sudoku.ml
test/: dune  test_cnf.ml  test_dpll.ml  test_simple.ml  test_sudoku.ml
