(lang dune 3.19)

(name TD2)

(generate_opam_files true)

(source
 (github leo-leesco/Computational-logic-TD2))

(authors "Léo LEESCO <leo.leesco@polytechnique.edu>")

(maintainers "Léo LEESCO <leo.leesco@polytechnique.edu>")

(package
 (name TD2)
 (depends ocaml)
 (tags
  ("SAT solver" "sudoku")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
